# composer

./: README.md  composer.py  play.py  pyproject.toml
sheet/: .gitignore  4536251  4536251_1  4536251_2  4536251_3  make.py  melody1  melody2  两只老虎1  两只老虎2  回梦游仙  御剑江湖  浮光  穿越时空的思念  金风玉露  青花瓷
src/composer/: cli.py  composer.py  signal.py
