[project]
name = "composer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = ["numpy>=2.3.4", "scipy>=1.16.3", "sounddevice>=0.5.3"]

[project.scripts]
composer = "composer.cli:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
lint.extend-select = ["I", "UP034", "F403"]
